# WhisperFlow

./: .gitignore  build.gradle.kts  export_nllb.py  prepare_models.sh  settings.gradle.kts
gradle/: libs.versions.toml
src/main/: AndroidManifest.xml
src/main/cpp/: CMakeLists.txt  ggml-backend-dl.cpp  ggml-cpp.h  whisper-arch.h  whisper.cpp  whisper_jni.cpp
src/main/java/com/liveTranslation/: MainActivity.kt
src/main/java/com/liveTranslation/ai/: LocalNllbEngine.kt  SpeechToTextEngine.kt  TranslationEngine.kt  WhisperCppEngine.kt
src/main/java/com/liveTranslation/service/: AudioCaptureService.kt
src/main/java/com/liveTranslation/ui/: FloatingSubtitleView.kt
src/main/java/com/liveTranslation/util/: NotificationHelper.kt
src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_stop.xml  ic_translate.xml  subtitle_background.xml
src/main/res/layout/: activity_main.xml  floating_subtitle.xml
src/main/res/values/: strings.xml  themes.xml
