cmake_minimum_required(VERSION 3.22.1)
project("whisper_jni" C CXX)

# ── Core ggml + Whisper sources ────────────────────────────────────────────
set(WHISPER_JNI_SOURCES
    # JNI bridge
    whisper_jni.cpp

    # Whisper core
    whisper.cpp

    # GGML tensor library
    ggml.c
    ggml-alloc.c
    ggml-backend.cpp          # NOTE: .cpp not .c
    ggml-backend-reg.cpp
    ggml-backend-dl.cpp       # dl_load_library / dl_get_sym / dl_error (POSIX dlfcn)
    ggml-quants.c
    ggml-threading.cpp

    # CPU backend – implementation (ggml-cpu/ subdirectory)
    ggml-cpu/ggml-cpu.c
    ggml-cpu/ggml-cpu.cpp
    ggml-cpu/repack.cpp
    ggml-cpu/hbm.cpp
    ggml-cpu/quants.c
    ggml-cpu/traits.cpp
    ggml-cpu/binary-ops.cpp
    ggml-cpu/unary-ops.cpp
    ggml-cpu/vec.cpp
    ggml-cpu/ops.cpp
    ggml-cpu/llamafile/sgemm.cpp
)

# ── Architecture-specific sources ─────────────────────────────────────────
# Android phones are ARM64; the emulator is x86_64.
if (ANDROID_ABI STREQUAL "arm64-v8a" OR ANDROID_ABI STREQUAL "armeabi-v7a")
    list(APPEND WHISPER_JNI_SOURCES
        ggml-cpu/arch/arm/quants.c
        ggml-cpu/arch/arm/repack.cpp
    )
elseif (ANDROID_ABI STREQUAL "x86_64" OR ANDROID_ABI STREQUAL "x86")
    list(APPEND WHISPER_JNI_SOURCES
        ggml-cpu/arch/x86/quants.c
        ggml-cpu/arch/x86/repack.cpp
    )
endif()

add_library(whisper_jni SHARED ${WHISPER_JNI_SOURCES})

# ── Language standards ─────────────────────────────────────────────────────
target_compile_features(whisper_jni PRIVATE c_std_11 cxx_std_17)

# ── Compile definitions ────────────────────────────────────────────────────
# GGML_VERSION / GGML_COMMIT are normally generated by CMake via configure_file
# from the ggml repo's ggml-version.h.in.  Since we vendor the source directly
# we provide fixed placeholder values here.
# GGML_USE_CPU must be defined so ggml-backend-reg.cpp includes ggml-cpu.h and
# calls ggml_backend_cpu_reg() – without it the CPU backend is never registered
# and all inference silently produces no output.
target_compile_definitions(whisper_jni PRIVATE
    GGML_VERSION="0.0.0"
    GGML_COMMIT="unknown"
    GGML_USE_CPU
)

# ── Base compile flags ─────────────────────────────────────────────────────
target_compile_options(whisper_jni PRIVATE
    -O3
    -DNDEBUG
    -DGGML_USE_LLAMAFILE        # enable llamafile SGEMM (already in sources)
)

# ── ABI-specific SIMD flags ────────────────────────────────────────────────
if (ANDROID_ABI STREQUAL "arm64-v8a")
    target_compile_options(whisper_jni PRIVATE -march=armv8-a+dotprod+fp16)
elseif (ANDROID_ABI STREQUAL "x86_64")
    target_compile_options(whisper_jni PRIVATE -msse4.2 -mavx -mavx2 -mfma -mf16c)
endif()

# ── Include directories ────────────────────────────────────────────────────
target_include_directories(whisper_jni PRIVATE
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_SOURCE_DIR}/ggml-cpu
)

# ── Android system libraries ───────────────────────────────────────────────
find_library(log-lib  log)
find_library(android-lib android)
target_link_libraries(whisper_jni ${log-lib} ${android-lib})
